2371: Fix styles on option sets modals.
Just removed some custom css that was making it look strange and
added styles to show an inline label -> input on the levels and
option edit with latitude and longitude.

--- a/app/assets/stylesheets/all/elmo_forms.css.scss
+++ b/app/assets/stylesheets/all/elmo_forms.css.scss
@@ -233,20 +233,10 @@ div.cascading-selects {
       border: none;
     }
 
-    div.label_and_control {
-      width: 100%;
-    }
-
-    label.main {
-      width: 30%;
-    }
-
-    div.control {
+   div.control {
       width: 60%;
 
       div.widget {
-        width: 100%;
-
         // These can't be as wide as normally.
         input[type=text], input.text, input[type=password], select, textarea {
           width: 100%;
